--- a/templates/admin/change_password.html
+++ b/templates/admin/change_password.html
@@ -1,11 +1,6 @@
-<html>
- <head>
- <title>
-           Change Password
-        </title>
-    </head>
-    <body>
-<table>
+   {% extends "admin/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
 <form action="/adm_change_pass_post" method="post">
     <tr>
 Current Password : <input name="cur_pass" type="text"><br>
@@ -21,5 +16,4 @@ Current Password : <input name="cur_pass" type="text"><br>
                 <input type="submit" value="Change Password">
                     </tr></form>
 </table>
-    </body>
-</html>
+ {% endblock %}
