--- a/templates/admin/view_and_search_customer.html
+++ b/templates/admin/view_and_search_customer.html
@@ -1,16 +1,21 @@
-<html>
- <head><title>
-          Products
-        </title> </head>
-    <body>
-<table border="1">
-<tr>
-    <form action="/adm_search_customer" method="post">
-    <input name="search" type="text">
-    <input type="submit" value="search">
-        </form>
-</tr>
 
+   {% extends "admin/index.html" %}
+{% block body %}
+       <form action="/adm_search_customer" method="post">
+  <table class="pull-right">
+<tr>
+    <td colspan="3">
+    <input name="search" type="text" class="form-control" placeholder="Search Here"></td>
+    <td> <button type="submit" class="btn btn-success" style="padding: 0.5rem 1rem;margin-bottom: 0">
+   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+</svg> search
+    </button>
+    </td>
+</tr>
+   </table>
+    </form><br>
+<table class="table table-bordered">
     <tr>
         <th>Sl No</th>
         <th>Name</th>
@@ -32,5 +37,4 @@
             </tr>
            {% endfor %}
 </table>
-    </body>
-</html>
+       {% endblock %}
