--- a/templates/shop/view_item.html
+++ b/templates/shop/view_item.html
@@ -1,11 +1,6 @@
-<html>
-    <head>
-    <title>
-             View Items
-           </title>
-       </head>
-       <body>
-   <table border="1">
+  {% extends "shop/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
    
        <tr>
            <th>Sl No</th>
@@ -25,5 +20,4 @@
               </tr>
             {% endfor %}
    </table>
-       </body>
-   </html>
+   {% endblock %}
