--- a/templates/admin/view_accepted_shop.html
+++ b/templates/admin/view_accepted_shop.html
@@ -1,17 +1,42 @@
-<html>
- <head>
- <title>
-           Accepted Shop
-        </title>
-    </head>
-    <body>
-<table border="1">
+   {% extends "admin/index.html" %}
+{% block body %}
+          <form action="/adm_search_shop" method="post">
+
+   <table class="pull-right">
 <tr>
-    <form action="/adm_search_shop" method="post">
-    <input name="search" type="text">
-    <input type="submit" value="search">
-        </form>
+    <td colspan="3">
+    <input name="search" type="text" class="form-control" placeholder="Search Here"></td>
+    <td> <button type="submit" class="btn btn-success" style="padding: 0.5rem 1rem;margin-bottom: 0">
+   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+</svg> search
+    </button>
+    </td>
+<td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td><a href="/adm_view_new_shop" class="btn btn-success" style="padding: 0.5rem 1rem;margin-bottom: 0">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+</svg>
+        New Shops</a>
+        &nbsp;&nbsp;</td>
+
+
+         <td> <a href="/adm_view_rejected_shop" class="btn btn-danger" style="padding: 0.5rem 1rem;margin-bottom: 0">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+</svg>
+             Rejected Shop</a>
+    </td>
+
 </tr>
+   </table>
+          </form><br>
+    <table class="table table-bordered">
     <tr>
         <th>Sl No</th>
         <th>Name</th>
@@ -27,9 +52,13 @@
      <td>{{ i['address'] }}</td>
      <td>{{ i['email'] }}</td>
      <td>{{ i['contact'] }}</td>
-     <td><a href="/adm_chat/{{ i['loginid'] }}">Chat</a></td>
+     <td><a href="/adm_chat/{{ i['loginid'] }}" class="btn btn-primary" style="padding: 0.5rem 1rem;margin-bottom: 0">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+  <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+</svg>
+         Chat</a></td>
             </tr>
           {% endfor %}
 </table>
-    </body>
-</html>
+          </form>
+{% endblock %}
