--- a/templates/admin/view_delivery_boy.html
+++ b/templates/admin/view_delivery_boy.html
@@ -1,13 +1,19 @@
 
-<html>
-    <head>
-    <title>
-             View Delivery Boys
-           </title>
-       </head>
-       <body>
-   <table border="1">
-   
+   {% extends "admin/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
+   <tr>
+    <td colspan="7"></td>
+       <td colspan="2">
+    <a href="/adm_add_delivery_boy" class="btn btn-success">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+  <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+  <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+</svg>
+        Add Delivery Boy</a>
+</td>
+
+   </tr>
        <tr>
            <th>Sl No</th>
            <th>Image</th>
@@ -28,11 +34,26 @@
         <td>{{ i['age'] }}</td>
         <td>{{ i['email'] }}</td>
         <td>{{ i['contact'] }}</td>
-        <td><a href="/adm_delivery_boy_edit/{{ i['boyid'] }}">Edit</a><br><a href="/adm_delete_delivery_boy/{{ i['boyid'] }}">Delete</a></td>
-            <td><a href="/adm_chat_with_delivery_boy/{{ i['loginid'] }}">chat</a></td>
+        <td><a href="/adm_delivery_boy_edit/{{ i['boyid'] }}" class="btn btn-success" style="padding: 0.3rem 0.7rem;margin-bottom: 5px">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+</svg>
+            Edit</a><br>
+
+
+            <a href="/adm_delete_delivery_boy/{{ i['boyid'] }}" class="btn btn-danger" style="padding: 0.3rem 0.7rem;margin-bottom: 0">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+  <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+</svg>
+                Delete</a></td>
+            <td><a href="/adm_chat_with_delivery_boy/{{ i['loginid'] }}" class="btn btn-primary" style="padding: 0.5rem 0.9rem;margin-bottom: 0">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+  <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+</svg>
+                chat</a></td>
                </tr>
 
               {% endfor %}
    </table>
-       </body>
-   </html>
+   {% endblock %}
