--- a/templates/admin/view_item.html
+++ b/templates/admin/view_item.html
@@ -1,11 +1,6 @@
-<html>
-    <head>
-    <title>
-             View Items
-           </title>
-       </head>
-       <body>
-   <table border="1">
+   {% extends "admin/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
    
        <tr>
            <th>Sl No</th>
@@ -28,5 +23,4 @@
             {% endfor %}
             
    </table>
-       </body>
-   </html>
+           {% endblock %}
