--- a/templates/admin/view_new_shop.html
+++ b/templates/admin/view_new_shop.html
@@ -1,11 +1,7 @@
-<html>
- <head>
- <title>
-           New Shop
-        </title>
-    </head>
-    <body>
-<table border="1">
+
+   {% extends "admin/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
 
     <tr>
         <th>Sl No</th>
@@ -22,10 +18,19 @@
      <td>{{ i['address'] }}</td>
      <td>{{ i['email'] }}</td>
      <td>{{ i['contact'] }}</td>
-     <td><a href="/adm_approve_new_shop/{{ i['loginid'] }}">Approve</a><br>
-         <a href="/adm_reject_new_shop/{{ i['loginid'] }}">Reject</a></td>
+     <td><a href="/adm_approve_new_shop/{{ i['loginid'] }}" class="btn btn-success" style="padding: 0.5rem 1rem;margin-bottom: 0">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
+</svg>
+         Approve</a><br><br>
+         <a href="/adm_reject_new_shop/{{ i['loginid'] }}" class="btn btn-danger" style="padding: 0.5rem 1rem;margin-bottom: 0">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+</svg>
+             Reject</a></td>
             </tr>
              {% endfor %}
 </table>
-    </body>
-</html>
+   {% endblock %}
