--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../static/assets/img/favicon.png">
   <title>
-   E-Vengara Login
+   E-Vengara Register
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -33,24 +33,32 @@
               <div class="card card-plain mt-8">
                 <div class="card-header pb-0 text-left bg-transparent">
                   <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
-                  <p class="mb-0">Enter your email and password to sign in</p>
+                  <p class="mb-0">Enter your shop details to register</p>
                 </div>
                 <div class="card-body">
-                  <form  action="/adm_login_post" method="post" role="form">
-                    <label>Username</label>
+                  <form  action="/shop_register_post" method="post" role="form">
+                    <label>Shop Name</label>
                     <div class="mb-3">
-                      <input type="text" name="username"  class="form-control" placeholder="Username" aria-label="Email" aria-describedby="email-addon" required>
+                      <input type="text" name="name"  class="form-control" placeholder="Shop Name" aria-label="Email" aria-describedby="email-addon" required>
                     </div>
-                    <label>Password</label>
+                      <label>Address</label>
                     <div class="mb-3">
-                      <input type="password" name="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon" required>
+                      <input type="text" name="address"  class="form-control" placeholder="Address" aria-label="Email" aria-describedby="email-addon" required>
+                    </div>
+                   <label>Contact</label>
+                    <div class="mb-3">
+                      <input type="text" pattern="[0-9]{10}" name="contact"  class="form-control" placeholder="Contact" aria-label="Email" aria-describedby="email-addon" required>
+                    </div>
+                      <label>Email</label>
+                    <div class="mb-3">
+                      <input type="email" name="email"  class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" required>
                     </div>
 
                     <div class="text-center">
-                      <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Login</button>
+                      <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Register</button>
                     </div>
                     <br>
-                      <a href="/shop_register">register now</a>
+                      <a href="/">login</a>
                   </form>
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
