--- a/templates/shop/add_category.html
+++ b/templates/shop/add_category.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add Category</title>
-</head>
-<body>
-<table>
+   {% extends "shop/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
         <form action="/shop_add_category_post" method="post">
         <tr>
-            Category: <input name="category" type="text"><br>
+            <td>
+                 Category: <input name="category" type="text" class="form-control" required>
+            </td>
+
         </tr>
 
         <tr>
-            <input type="submit" value="Add">
+            <td>
+                 <input type="submit" value="Add" class="btn btn-primary">
+            </td>
+
         </tr>
             </form>
     </table>
-
-</body>
-</html>
+   {% endblock %}
