--- a/templates/shop/chat.html
+++ b/templates/shop/chat.html
@@ -1,3 +1,5 @@
+  {% extends "shop/index.html" %}
+{% block body %}
 
 <form id="form1" name="form1" method="post" action="/emp_chat_post">
     <center><h4><i>CHAT WITH ADMIN</i></h4></center><br>
@@ -61,3 +63,4 @@
     });
 </script>
 </form>
+{% endblock %}
