--- a/templates/shop/view_order.html
+++ b/templates/shop/view_order.html
@@ -1,11 +1,6 @@
-<html>
-    <head>
-    <title>
-             View Order
-           </title>
-       </head>
-       <body>
-   <table border="1">
+    {% extends "shop/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
    
        <tr>
            <th>Sl No</th>
@@ -23,10 +18,13 @@
         <td>{{ i['cname'] }}</td>
         <td>{{ i['status'] }}</td>
 
-        <td><a href="/shop_view_item/{{ i['ordermainid'] }}">View Items</a></td>
+        <td><a href="/shop_view_item/{{ i['ordermainid'] }}" class="btn btn-primary" style="padding: 0.5rem 1rem;margin-bottom: 0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+  <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+</svg>
+            View Items</a></td>
               </tr>
        {% endfor %}
             
    </table>
-       </body>
-   </html>
+   {% endblock %}
