--- a/templates/shop/change_password.html
+++ b/templates/shop/change_password.html
@@ -1,25 +1,32 @@
-<html>
- <head>
- <title>
-           Change Password
-        </title>
-    </head>
-    <body>
-<table>
+  {% extends "shop/index.html" %}
+{% block body %}
+   <table class="table table-bordered">
 <form action="/shop_change_pass_post" method="post">
     <tr>
-Current Password : <input name="cur_pass" type="text"><br>
+        <td>
+            Current Password : <input name="cur_pass" type="text" class="form-control" required>
+        </td>
+
     </tr>
 
     <tr>
-       New Password : <input name="new_pass" type="password"><br>
+        <td>
+              New Password : <input name="new_pass" type="password" class="form-control" required>
+        </td>
+
             </tr>
             <tr>
-                Confirm Password : <input name="confirm_pass" type="password"><br>
+                <td>
+                      Confirm Password : <input name="confirm_pass" type="password" class="form-control" required>
+                </td>
+
                      </tr>
             <tr>
-                <input type="submit" value="Change Password">
+                <td>
+                     <input type="submit" value="Change Password" class="btn btn-primary">
+                </td>
+
                     </tr></form>
 </table>
-    </body>
-</html>
+
+  {% endblock %}
