--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -136,48 +136,56 @@
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
+      <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
       <div class="container-fluid py-1 px-3">
-        <nav aria-label="breadcrumb">
-{#          <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">#}
-{#            <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>#}
-{#            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>#}
-{#          </ol>#}
-          <h6 class="font-weight-bolder mb-0">Shop Dashboard</h6>
+        <nav aria-label="breadcrumb" style="margin-right: 40%;">
+
+          <h6 class="font-weight-bolder mb-0">Dashboard</h6>
         </nav>
-        <div><div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Account
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">View Profile</a>
-    <a class="dropdown-item" href="#">Change Password</a>
-    <a class="dropdown-item" href="#">Logout</a>
+
+
+
+        <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+          <div class="ms-md-auto pe-md-3 d-flex align-items-center">
+            <div class="input-group">
+   <div class="dropdown show" style="right: 0px;">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 8px 7px;">
+   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+  <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+</svg>
+      Account
+  </a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <a class="dropdown-item" href="/shop_view_profile">View Profile</a>
+    <a class="dropdown-item" href="/shop_change_password">Change Password</a>
+    <a class="dropdown-item" href="/">Logout</a>
   </div>
 </div>
-{#                <span style="right:0">#}
-{#                    <a href="/" class="btn btn-danger">#}
-{#                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">#}
-{#  <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>#}
-{#  <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>#}
-{#</svg> logout#}
-{#                    </a>#}
-{#                    </span>#}
+            </div>
+          </div>
 
-{#          <ul class="navbar-nav  justify-content-end">#}
-{#            <li class="nav-item d-flex align-items-center">#}
-{#              <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">#}
-{#                <i class="fa fa-user me-sm-1"></i>#}
-{#              </a>#}
-{#            </li>#}
-{##}
-{##}
-{##}
-{#          </ul>#}
+          <ul class="navbar-nav  justify-content-end">
+
+            <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+              <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
+                <div class="sidenav-toggler-inner">
+                  <i class="sidenav-toggler-line"></i>
+                  <i class="sidenav-toggler-line"></i>
+                  <i class="sidenav-toggler-line"></i>
+                </div>
+              </a>
+            </li>
+
+
+          </ul>
+
         </div>
+
       </div>
+
     </nav>
-    <!-- End Navbar -->
+      <!-- End Navbar -->
     <div class="container-fluid py-4">
 
 
